--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "js-train",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --ignore public"
+    "dev": "nodemon --ignore public",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,7 @@
     "express": "^4.18.2",
     "livereload": "^0.9.3",
     "nodemon": "^2.0.22"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
